<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.ldaptive</groupId>
  <artifactId>ldaptive-integration-test</artifactId>
  <packaging>jar</packaging>
  <version>1.0.4-SNAPSHOT</version>
  <name>LDAPTIVE INTEGRATION TESTS</name>

  <prerequisites>
    <maven>2.2.1</maven>
  </prerequisites>

  <properties>
    <ldapTestProvider>org.ldaptive.provider.jndi.JndiProvider</ldapTestProvider>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.ldaptive</groupId>
      <artifactId>ldaptive</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.ldaptive</groupId>
      <artifactId>ldaptive-templates</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.ldaptive</groupId>
      <artifactId>ldaptive-beans</artifactId>
      <version>1.0.3-SNAPSHOT</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.8.8</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.7</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.7</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sun.codemodel</groupId>
      <artifactId>codemodel</artifactId>
      <version>2.6</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <version>1.50</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>httpunit</groupId>
      <artifactId>httpunit</artifactId>
      <version>1.6.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>4.0.5.RELEASE</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-expression</artifactId>
      <version>4.0.5.RELEASE</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*.config</include>
          <include>**/*.ldif</include>
          <include>**/*.dsmlv1</include>
          <include>**/*.xml</include>
          <include>**/*.properties</include>
        </includes>
      </testResource>
      <testResource>
        <directory>src/test/resources</directory>
        <filtering>false</filtering>
        <includes>
          <include>**/*.keytab</include>
          <include>**/*.keystore</include>
          <include>**/*.truststore</include>
          <include>**/*.crt</include>
          <include>**/*.jpg</include>
        </includes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>1.3.1</version>
        <executions>
          <execution>
            <id>enforce-has-env</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireProperty>
                  <property>ldapTestHost</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapSslTestHost</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapBaseDn</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapBindDn</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapBindCredential</property>
                </requireProperty>
                <requireProperty>
                  <property>ldapTestGroup</property>
                </requireProperty>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.6</version>
        <executions>
          <execution>
            <id>copy-testng</id>
            <phase>validate</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${basedir}/target/test-classes</outputDirectory>
              <resources>
                <resource>
                  <directory>${basedir}/src/test/testng</directory>
                  <filtering>true</filtering>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.17</version>
        <configuration>
          <argLine>-Dorg.ldaptive.provider=${ldapTestProvider} -Xms1g -Xmx2g -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
          <suiteXmlFiles>
            <suiteXmlFile>target/test-classes/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
          <!-- sometimes useful if testng runs out of memory
          <disableXmlReport>true</disableXmlReport>
          -->
          <systemProperties>
            <property>
              <name>log4j.configuration</name>
              <value>log4j.xml</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.9</version>
        <executions>
          <execution>
            <id>add-test-source</id>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <phase>pre-integration-test</phase>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-test-sources/ldaptive</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <fork>true</fork>
          <debug>true</debug>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <compilerArgument>-Xlint:unchecked</compilerArgument>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
        <executions>
          <execution>
            <phase>integration-test</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>apache</id>
      <activation>
        <property>
          <name>apache.version</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.ldaptive</groupId>
          <artifactId>ldaptive-apache</artifactId>
          <version>${apache.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <properties>
        <ldapTestProvider>org.ldaptive.provider.apache.ApacheLdapProvider</ldapTestProvider>
      </properties>
    </profile>
    <profile>
      <id>jldap</id>
      <activation>
        <property>
          <name>jldap.version</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.ldaptive</groupId>
          <artifactId>ldaptive-jldap</artifactId>
          <version>${jldap.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <properties>
        <ldapTestProvider>org.ldaptive.provider.jldap.JLdapProvider</ldapTestProvider>
      </properties>
    </profile>
    <profile>
      <id>netscape</id>
      <activation>
        <property>
          <name>netscape.version</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.ldaptive</groupId>
          <artifactId>ldaptive-netscape</artifactId>
          <version>${netscape.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <properties>
        <ldapTestProvider>org.ldaptive.provider.netscape.NetscapeProvider</ldapTestProvider>
      </properties>
    </profile>
    <profile>
      <id>unboundid</id>
      <activation>
        <property>
          <name>unboundid.version</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.ldaptive</groupId>
          <artifactId>ldaptive-unboundid</artifactId>
          <version>${unboundid.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <properties>
        <ldapTestProvider>org.ldaptive.provider.unboundid.UnboundIDProvider</ldapTestProvider>
      </properties>
    </profile>
    <profile>
      <id>opends</id>
      <activation>
        <property>
          <name>opends.version</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.ldaptive</groupId>
          <artifactId>ldaptive-opends</artifactId>
          <version>${opends.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <properties>
        <ldapTestProvider>org.ldaptive.provider.opends.OpenDSProvider</ldapTestProvider>
      </properties>
    </profile>
    <profile>
      <id>opendj</id>
      <activation>
        <property>
          <name>opendj.version</name>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.ldaptive</groupId>
          <artifactId>ldaptive-opendj</artifactId>
          <version>${opendj.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <properties>
        <ldapTestProvider>org.ldaptive.provider.opendj.OpenDJProvider</ldapTestProvider>
      </properties>
    </profile>
  </profiles>
</project>
